// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickBinTabScreen Tests PickBinTab externalized function tests Test renders PickBinTabScreen component with multi bin enabled and atleast 1 bin ready to start 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        >
          [missing "en.PICKING.ACCEPT_MULTIPLE_BINS" translation]
        </Text>
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text>
            [missing "en.PICKING.ACCEPT_FOLLOWING_BINS" translation]
          </Text>
        </View>
        <FlatList
          data={
            [
              {
                "assignedAssociate": "",
                "category": 46,
                "createTs": "2022-04-03T12:55:31.9633333Z",
                "createdBy": "Associate 2",
                "id": 4,
                "isSelected": true,
                "itemDesc": "Candy",
                "itemNbr": 7344,
                "moveToFront": true,
                "palletId": "4321",
                "palletLocationId": 1672,
                "palletLocationName": "C1-2-1",
                "quickPick": false,
                "salesFloorLocationId": 1673,
                "salesFloorLocationName": "C1-3",
                "status": "ready to bin",
                "upcNbr": "000041800004",
              },
            ]
          }
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={null}
    refreshing={false}
    renderItem={[Function]}
  />
  <ButtonBottomTab
    containerHeight={80}
    disableLeftButton={false}
    disableRightButton={false}
    leftTitle="[missing "en.GENERICS.CANCEL" translation]"
    onLeftPress={[Function]}
    onRightPress={[Function]}
    rightTitle="[missing "en.GENERICS.CONTINUE" translation]"
  />
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests PickBinTab externalized function tests Test renders PickBinTabScreen component with multi pick enabled and atleast 1 pick ready to start 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        >
          [missing "en.PICKING.ACCEPT_MULTIPLE_PICKS" translation]
        </Text>
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text>
            [missing "en.PICKING.ACCEPT_FOLLOWING_PICKS" translation]
          </Text>
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={null}
    refreshing={false}
    renderItem={[Function]}
  />
  <ButtonBottomTab
    containerHeight={80}
    disableLeftButton={false}
    disableRightButton={true}
    leftTitle="[missing "en.GENERICS.CANCEL" translation]"
    onLeftPress={[Function]}
    onRightPress={[Function]}
    rightTitle="[missing "en.GENERICS.CONTINUE" translation]"
  />
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests PickBinTab externalized function tests tests rendered output for renderMultipickConfirmationDialog when multiBin was enabled 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00000099",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ffffffff",
            "borderRadius": 8,
            "justifyContent": "center",
            "paddingBottom": 12,
            "width": "80%",
          },
          {
            "minHeight": 150,
          },
        ]
      }
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#0071e9",
              "borderTopEndRadius": 8,
              "borderTopStartRadius": 8,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontSize": 18,
              }
            }
          >
            [missing "en.PICKING.ACCEPT_MULTIPLE_BINS" translation]
          </Text>
        </View>
        <View>
          <View
            style={
              {
                "padding": 12,
              }
            }
          >
            <Text>
              [missing "en.PICKING.ACCEPT_FOLLOWING_BINS" translation]
            </Text>
          </View>
          <RCTScrollView
            data={
              [
                {
                  "assignedAssociate": "Associate 1",
                  "category": 71,
                  "createTs": "2022-04-02T12:55:31.9633333Z",
                  "createdBy": "Associate 1",
                  "id": 418,
                  "isSelected": true,
                  "itemDesc": "Teapot",
                  "itemNbr": 734,
                  "moveToFront": true,
                  "palletId": "4321",
                  "palletLocationId": 1672,
                  "palletLocationName": "C1-2",
                  "quickPick": false,
                  "salesFloorLocationId": 1673,
                  "salesFloorLocationName": "C1-3",
                  "status": "accepted pick",
                  "upcNbr": "000041800003",
                },
                {
                  "assignedAssociate": "Associate 1",
                  "category": 71,
                  "createTs": "2022-02-09T12:55:31.9633333Z",
                  "createdBy": "Manager 1",
                  "id": 3,
                  "isSelected": true,
                  "itemDesc": "Swiffer",
                  "itemNbr": 845,
                  "moveToFront": true,
                  "palletId": "5432",
                  "palletLocationId": 2345,
                  "palletLocationName": "BREW1-2",
                  "quickPick": false,
                  "salesFloorLocationId": 2345,
                  "salesFloorLocationName": "BREW1-2",
                  "status": "accepted pick",
                  "upcNbr": "000052900004",
                },
              ]
            }
            getItem={[Function]}
            getItemCount={[Function]}
            keyExtractor={[Function]}
            onContentSizeChange={[Function]}
            onLayout={[Function]}
            onMomentumScrollBegin={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            removeClippedSubviews={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={[]}
            style={
              {
                "borderWidth": 1,
                "flexGrow": 0,
                "margin": 12,
                "maxHeight": 120,
              }
            }
            viewabilityConfigCallbackPairs={[]}
          >
            <View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={null}
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text>
                    [missing "en.LOCATION.PALLET" translation] 4321
                  </Text>
                  <Text>
                    [missing "en.PICKING.LOC_LABEL" translation]: C1-2
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={null}
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text>
                    [missing "en.LOCATION.PALLET" translation] 5432
                  </Text>
                  <Text>
                    [missing "en.PICKING.LOC_LABEL" translation]: BREW1-2
                  </Text>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "margin": 12,
            }
          }
        >
          <View
            style={
              [
                {
                  "height": 45,
                },
                {
                  "paddingRight": 12,
                  "width": "50%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffffff",
                    "borderColor": "#0071e9",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                  }
                }
                testID="cancelButton"
              >
                <Text
                  style={
                    {
                      "color": "#0071e9",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": undefined,
                    }
                  }
                >
                  [missing "en.GENERICS.CANCEL" translation]
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 45,
                },
                {
                  "paddingLeft": 12,
                  "width": "50%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#0071e9",
                    "borderRadius": 5,
                    "elevation": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                  }
                }
                testID="acceptButton"
              >
                <Text
                  style={
                    {
                      "color": "#ffffffff",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": undefined,
                    }
                  }
                >
                  [missing "en.PICKING.ACCEPT" translation]
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`PickBinTabScreen Tests PickBinTab externalized function tests tests rendered output for renderMultipickConfirmationDialog when multiPick was enabled 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00000099",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ffffffff",
            "borderRadius": 8,
            "justifyContent": "center",
            "paddingBottom": 12,
            "width": "80%",
          },
          {
            "minHeight": 150,
          },
        ]
      }
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#0071e9",
              "borderTopEndRadius": 8,
              "borderTopStartRadius": 8,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontSize": 18,
              }
            }
          >
            [missing "en.PICKING.ACCEPT_MULTIPLE_PICKS" translation]
          </Text>
        </View>
        <View>
          <View
            style={
              {
                "padding": 12,
              }
            }
          >
            <Text>
              [missing "en.PICKING.ACCEPT_FOLLOWING_PICKS" translation]
            </Text>
          </View>
          <RCTScrollView
            data={
              [
                {
                  "assignedAssociate": "Associate 1",
                  "category": 71,
                  "createTs": "2022-04-02T12:55:31.9633333Z",
                  "createdBy": "Associate 1",
                  "id": 418,
                  "isSelected": true,
                  "itemDesc": "Teapot",
                  "itemNbr": 734,
                  "moveToFront": true,
                  "palletId": "4321",
                  "palletLocationId": 1672,
                  "palletLocationName": "C1-2",
                  "quickPick": false,
                  "salesFloorLocationId": 1673,
                  "salesFloorLocationName": "C1-3",
                  "status": "accepted pick",
                  "upcNbr": "000041800003",
                },
                {
                  "assignedAssociate": "Associate 1",
                  "category": 71,
                  "createTs": "2022-02-09T12:55:31.9633333Z",
                  "createdBy": "Manager 1",
                  "id": 3,
                  "isSelected": true,
                  "itemDesc": "Swiffer",
                  "itemNbr": 845,
                  "moveToFront": true,
                  "palletId": "5432",
                  "palletLocationId": 2345,
                  "palletLocationName": "BREW1-2",
                  "quickPick": false,
                  "salesFloorLocationId": 2345,
                  "salesFloorLocationName": "BREW1-2",
                  "status": "accepted pick",
                  "upcNbr": "000052900004",
                },
              ]
            }
            getItem={[Function]}
            getItemCount={[Function]}
            keyExtractor={[Function]}
            onContentSizeChange={[Function]}
            onLayout={[Function]}
            onMomentumScrollBegin={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            removeClippedSubviews={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={[]}
            style={
              {
                "borderWidth": 1,
                "flexGrow": 0,
                "margin": 12,
                "maxHeight": 120,
              }
            }
            viewabilityConfigCallbackPairs={[]}
          >
            <View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={null}
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text>
                    [missing "en.LOCATION.PALLET" translation] 4321
                  </Text>
                  <Text>
                    [missing "en.PICKING.LOC_LABEL" translation]: C1-2
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={null}
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text>
                    [missing "en.LOCATION.PALLET" translation] 5432
                  </Text>
                  <Text>
                    [missing "en.PICKING.LOC_LABEL" translation]: BREW1-2
                  </Text>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
        <View
          style={
            {
              "flex": 0,
              "flexDirection": "row",
              "margin": 12,
            }
          }
        >
          <View
            style={
              [
                {
                  "height": 45,
                },
                {
                  "paddingRight": 12,
                  "width": "50%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffffff",
                    "borderColor": "#0071e9",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                  }
                }
                testID="cancelButton"
              >
                <Text
                  style={
                    {
                      "color": "#0071e9",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": undefined,
                    }
                  }
                >
                  [missing "en.GENERICS.CANCEL" translation]
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 45,
                },
                {
                  "paddingLeft": 12,
                  "width": "50%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#0071e9",
                    "borderRadius": 5,
                    "elevation": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                  }
                }
                testID="acceptButton"
              >
                <Text
                  style={
                    {
                      "color": "#ffffffff",
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": undefined,
                    }
                  }
                >
                  [missing "en.PICKING.ACCEPT" translation]
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component when user clicks continue on multi pick/bin mode 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        >
          [missing "en.PICKING.ACCEPT_MULTIPLE_PICKS" translation]
        </Text>
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text>
            [missing "en.PICKING.ACCEPT_FOLLOWING_PICKS" translation]
          </Text>
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={null}
    refreshing={true}
    renderItem={[Function]}
  />
  <ButtonBottomTab
    containerHeight={80}
    disableLeftButton={false}
    disableRightButton={true}
    leftTitle="[missing "en.GENERICS.CANCEL" translation]"
    onLeftPress={[Function]}
    onRightPress={[Function]}
    rightTitle="[missing "en.GENERICS.CONTINUE" translation]"
  />
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component while refreshing 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text />
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[Function]}
    refreshing={true}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component with "cancel & continue" buttons if multiPick/multiBin is enabled 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        >
          [missing "en.PICKING.ACCEPT_MULTIPLE_BINS" translation]
          [missing "en.PICKING.ACCEPT_MULTIPLE_PICKS" translation]
        </Text>
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text>
            [missing "en.PICKING.ACCEPT_FOLLOWING_BINS" translation]
            [missing "en.PICKING.ACCEPT_FOLLOWING_PICKS" translation]
          </Text>
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={null}
    refreshing={false}
    renderItem={[Function]}
  />
  <ButtonBottomTab
    containerHeight={80}
    disableLeftButton={false}
    disableRightButton={true}
    leftTitle="[missing "en.GENERICS.CANCEL" translation]"
    onLeftPress={[Function]}
    onRightPress={[Function]}
    rightTitle="[missing "en.GENERICS.CONTINUE" translation]"
  />
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component with AssignedToMe List and zone 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text />
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component with accept multiPick and multiBin buttons 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text />
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`PickBinTabScreen Tests rendering the PickBinTabScreen component Test renders the PickBinTabScreen component without AssignedToMe List and zone 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={150}
    modalType="FormHeader"
    onClose={[Function]}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#0071e9",
            "borderTopEndRadius": 8,
            "borderTopStartRadius": 8,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "padding": 12,
            }
          }
        >
          <Text />
        </View>
        <FlatList
          data={[]}
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            {
              "borderWidth": 1,
              "flexGrow": 0,
              "margin": 12,
              "maxHeight": 120,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "margin": 12,
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingRight": 12,
              "width": "50%",
            }
          }
          testID="cancelButton"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "paddingLeft": 12,
              "width": "50%",
            }
          }
          testID="acceptButton"
          title="[missing "en.PICKING.ACCEPT" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <FlatList
    data={
      [
        "assignedToMe",
        "BREW",
        "C",
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eeeeee",
        "padding": 10,
      }
    }
  >
    <Text>
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;
